--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "homepage": "https://jsohndata.github.io/bluenight-in-seoul-clock",
+  "homepage": "https://jsohndata.github.io/bluenight-in-seoul",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
