--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,8 @@
 {
   "workbench.colorCustomizations": {
     "terminal.background": "#24253a",
-    "activityBar.background": "#2E0491",
-    "titleBar.activeBackground": "#4005CB",
-    "titleBar.activeForeground": "#FDFCFF"
+    "activityBar.background": "#912004",
+    "titleBar.activeBackground": "#14eccf",
+    "titleBar.activeForeground": "#0e0b13"
   }
 }
